[gd_scene load_steps=2 format=3 uid="uid://cpffnhboaxsb3"]

[ext_resource type="Script" path="res://src/player/terrain_detector.gd" id="1_65l6x"]

[node name="TerrainDetector" type="Node2D"]
script = ExtResource("1_65l6x")

[node name="WallRayCast" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(6, 0)

[node name="JumpRayCast" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(6, -16)
target_position = Vector2(0, 16)
hit_from_inside = true

[node name="FallRayCast" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(6, 0)
target_position = Vector2(0, 100)
hit_from_inside = true
